--- a/location/styles/styles.less
+++ b/location/styles/styles.less
@@ -7,7 +7,8 @@
   float: right;
 }
 
-#map-canvas { height: 100%;
+#map-canvas {
+  height: 100%;
   margin: 0 0 0 0.5em;
   padding: 0;
   float: right;
