added mb package and started on combined viewer

--- a/location/styles/styles.less
+++ b/location/styles/styles.less
@@ -1,10 +1,16 @@
 
 #left {
   float: left;
+  height: 100%;
+  width: 34%;
 }
 
 #right {
   float: right;
+}
+
+#datelist {
+  overflow-y: scroll;
 }
 
 #map-canvas {
@@ -13,7 +19,7 @@
   padding: 0;
   float: right;
   background: #888888;
-  width: 60%;}
+  width: 65%;}
 
 #speedlegend {
   height: 50px;
